# ckb-auth

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  capsule.toml
.github/workflows/: doc.yml  rust.yml
c/: auth.c  blake2b.h  ckb_auth.h  ckb_exec.h  ckb_hex.h  ckb_keccak256.h  dump_secp256k1_data_20210801.c  secp256k1_helper_20210801.h
c/cardano/: cardano_lock.mol  cardano_lock_inc.h  cardano_lock_mol.h  cardano_lock_mol2.h
ckb-auth-rs/: Cargo.toml
ckb-auth-rs/src/: ckb_auth.rs
docs/: auth.md  cardano-lock-zh.md  cardano.md  cardano_lock.md  ckb-auth-cli.md  litecoin.md  monero.md
examples/auth-demo/: Makefile  auth_demo.c
examples/auth-rust-demo/: Cargo.toml
examples/auth-rust-demo/src/: entry.rs  error.rs  main.rs
examples/auth-rust-demo/src/utils/: generate_sighash_all.rs  mod.rs
examples/cardano-demo/: Makefile  cardano_demo.c
rust-ckb-auth/: Cargo.toml
rust-ckb-auth/src/: blake2b.rs  child_script_entry.rs  ckb_auth.rs  error.rs  generate_sighash_all.rs  lib.rs  logger.rs
tests/auth_rust/: Cargo.toml  run.sh
tests/auth_rust/src/: lib.rs
tests/auth_rust/src/tests/: mod.rs
tests/auth_rust/tests/: misc.rs  test_auth_demo.rs
tests/auth_spawn_rust/: Makefile
tests/auth_spawn_rust/src/: lib.rs
tests/auth_spawn_rust/templates/: auth-spawn-rust-success.json  auth-spawn-success.json
tests/cardano_lock/: .gitignore  Cargo.toml  Makefile
tests/cardano_lock/src/: blockchain.rs  cardano.rs  cardano_lock_mol.rs  gen_cardano_signature.sh  lib.rs
tests/cardano_lock/templates/: cardano-success.json
tools/ckb-auth-cli/: Cargo.toml
tools/ckb-auth-cli/src/: auth_script.rs  cardano.rs  litecoin.rs  main.rs  monero.rs  utils.rs
