[package]
name = "ckb-auth-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = { version = "0.14.0", features = ["ckb2023"] }
log = { version = "0.4.17", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"]}
