[package]
name = "ckb-auth-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-vm = { version = "0.24.0", features = [ "asm" ] }
ckb-types = "=0.111.0-rc2"
ckb-hash = "=0.111.0-rc2"
ckb-script = "=0.111.0-rc2"
clap = "4.3.2"
hex = "0.4.3"
ckb-auth-rs = { path = "../../tests/auth_rust" }
lazy_static = "1.3.0"
bs58 = "0.5.0"
anyhow = "1.0.71"
base64 = "0.21.0"
serde_json = "1.0"
